# h2p-ricpad

./: .gitignore  CMakeLists.txt  README.md  sweep.py
examples/: req.sh  sweep_example.csv
ricpad/: CMakeLists.txt
ricpad/include/ricpad/: conversions.hpp  differentiate.hpp  hankdet.hpp  solver.hpp
ricpad/src/: conversions.cpp
src/: h2p.cpp  main.cpp
src/include/: coupling.hpp  fixed.hpp  fixed_u.hpp  h2p.hpp  req.hpp
tests/: test1.sh  test2.sh
tests/points/: get_points.py  test2.sh
tests/req/: .d2.kate-swp  analyze.py  d0  d1  d2  h2p-ricpad  plot_convergence.py  req-cont.sh  req.sh  req1.sh  req2.sh  results
tests/req/take2/: h2p-ricpad  req0.sh
